@startuml

!include uml_style.iuml

interface LogicBlock {
	+ virtual bool getResult() = 0
	+ virtual bool isCross() = 0
}

interface CrossBlock {
	# LogicBlock* block1
	# LogicBlock* block2
	+ bool canAcceptBlock()
	+ void giveBlock(LogicBlock*)
}

interface RichBlock {
	# QString var1name
	# QString var2name
	+ bool canAcceptVar()
	+ void giveVar(QString)
}

LogicBlock <|-up- TrueBlock
LogicBlock <|-down- FalseBlock
LogicBlock <|-left- RichBlock
LogicBlock <|-right- CrossBlock

RichBlock <|-- BooleanBlock
RichBlock <|-up- IntBlock
RichBlock <|-up- DoubleBlock
RichBlock <|-- StringBlock
StringBlock <|-up- StringListBlock
StringListBlock <|-up- StringListStringBlock
RichBlock <|-- SingleBlock

CrossBlock <|-- NotBlock
CrossBlock <|-up- AndBlock
CrossBlock <|-up- OrBlock
CrossBlock <|-- XOrBlock

@enduml